--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "node ./scripts/seed.js"
+    "seed": "node ./scripts/seed.ts"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.1",
     "@hookform/resolvers": "^3.3.4",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@vercel/blob": "^0.23.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "lucia": "^3.2.0",
     "lucide-react": "^0.372.0",
     "markdown-draft-js": "^2.4.0",
     "nanoid": "^5.0.7",
@@ -31,6 +33,7 @@
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.7.1",
     "zod": "^3.23.0"
   },
   "devDependencies": {
@@ -47,5 +50,8 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
